@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 21-03-2005 fixed: [ 1165273 ] Resume Play doesn't work on stacked items.
+  - 21-03-2005 fixed: Only the first item in a stacked video appeared in the database views.
+  - 21-03-2005 removed: Fuzzy stacking.
   - 21-03-2005 fixed: Slideshow on a dir with just 1 item in it would cause a crash.
   - 21-03-2005 fixed: Homepage buttonscroller images were deallocated and reallocated every frame.  No decent workaround available at present, so they are always allocated.
   - 21-03-2005 fixed: After seek or ff/rw in music, first 1/4 of a second of audio is from another part of the file.
